[tool.poetry]
name = "shascam"
version = "0.1.0"
description = ""
authors = ["DumbassNamedTuna <50528857+Bluefin-Tuna@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.2"
flask-sock = "^0.7.0"
google-cloud-speech = "^2.24.1"
gevent = "^24.2.1"
gevent-websocket = "^0.10.1"
ipykernel = "^6.29.2"
pydub = "^0.25.1"
yt-dlp = "^2023.12.30"
ffprobe = "^0.5"
googletrans = "3.1.0a0"
transformers = "^4.37.2"
speechrecognition = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
